# HBIM3

./: .gitignore  AGENTS.md  Opencode提示词.md  README.md  validate_merged_interface.js
.sisyphus/: boulder.json
.sisyphus/notepads/componentinfo-ifc-merge/: learnings.md
.sisyphus/notepads/continue-merge/: decisions.md  learnings.md
.sisyphus/plans/: componentinfo-ifc-merge.md  continue-merge.md
API.Development.Kit.MAC.29.3100/Examples/3D_Test/RFIX/: 3D_TestFix.grc
API.Development.Kit.MAC.29.3100/Examples/3D_Test/RFIX.mac/: Info.plist
API.Development.Kit.MAC.29.3100/Examples/3D_Test/Src/: 3D_Test.c
API.Development.Kit.MAC.29.3100/Examples/ComponentInfo/: CMakeLists.txt
API.Development.Kit.MAC.29.3100/Examples/ComponentInfo/RFIX/: ComponentInfoFix.grc
API.Development.Kit.MAC.29.3100/Examples/ComponentInfo/RFIX.mac/: Info.plist
API.Development.Kit.MAC.29.3100/Examples/ComponentInfo/Src/: APICommon.c  ComponentInfo.cpp  ComponentInfo.hpp  ComponentInfoDialog.cpp  ComponentInfoMain.cpp  PropertyUtils.cpp
API.Development.Kit.MAC.29.3100/Examples/Opening_Test/: CMakeLists.txt
API.Development.Kit.MAC.29.3100/Support/Inc/: ACAPI.hpp  ACAPI_Automate.h  ACAPI_Database.h  ACAPI_Environment.h  ACAPI_Goodies.h  ACAPI_Interface.h  ACAPI_Navigator.h  ACAPinc.h  APICalls.h  API_AttributeIndexUtils.hpp  API_Guid.hpp  API_ValueWrappers.hpp  APIdefs.h  APIdefs_3D.h  APIdefs_ActionCenter.hpp  APIdefs_AttributeIndex.hpp  APIdefs_Attributes.h  APIdefs_Automate.h  APIdefs_Base.h  APIdefs_Callback.h  APIdefs_Component.h  APIdefs_Database.h  APIdefs_ElementDifferenceGenerator.h  APIdefs_Elements.h  APIdefs_Environment.h  APIdefs_ErrorCodes.h  APIdefs_Favorite.h  APIdefs_Goodies.h  APIdefs_Interface.h  APIdefs_LibraryParts.h  APIdefs_ListData.h  APIdefs_ModulData.h  APIdefs_Navigator.h  APIdefs_Properties.h  APIdefs_Registration.h  APIdefs_SurfaceType.h  APIdefs_TeamworkReserveInterface.h  APIdefs_ViewSettings.hpp  GSLocalization.h  INavigatorCallbackInterface.hpp  (+2 more)
API.Development.Kit.MAC.29.3100/Support/Tools/: CompileResources.py
ComponentInfo/: AGENTS.md  CMakeLists.txt  README.md  build.sh  build_output.txt  build_output_latest.txt
ComponentInfo/RFIX/: ComponentInfoFix.grc
ComponentInfo/RFIX.mac/: Info.plist
ComponentInfo/RFIX/Images/: ArchiCADPlugin.icns
ComponentInfo/Src/: ComponentInfo.cpp  ComponentInfo.cpp.new  ComponentInfo.hpp  ComponentInfoDialog.hpp  ComponentInfoMain.cpp  ComponentInfoPalette.cpp  ComponentInfoPalette.cpp.bak  ComponentInfoPalette.cpp.bak2  ComponentInfoPalette.hpp  IFCPropertiesDialog.cpp  IFCPropertiesDialog.hpp  PropertyUtils.hpp
HBIMComponentEntry/Src/: PluginPalette.hpp
HBIMComponentInfoEntry/: build.sh
IFCPropertyReader/: AGENTS.md  CMakeLists.txt  README.md  build.sh
IFCPropertyReader/RFIX/: IFCPropertyReaderFix.grc  Selection_Test.html  Selection_Test.html.backup
IFCPropertyReader/RFIX.mac/: Info.plist
IFCPropertyReader/Src/: IFCPropertyReaderPalette.cpp  IFCPropertyReaderPalette.hpp  IFCPropertyUtils.cpp  IFCPropertyUtils.hpp  Main.cpp
MergedPlugin/: CEFDebuggingPlan.md  CMakeLists.txt  DEBUG_LOAD.md  DG_to_HTML_Implementation_Plan.md  DG_to_HTML_Migration.md  DebugLogAnalysis.md  EmptyPanelFix.md  LOG_ANALYSIS.md  PANEL_EMPTY_ANALYSIS.md  QUICK_START.md  README.md  RestoreFullFunctionality.md  TESTING.md  build.sh  check_bundle.sh  deploy.sh  jest.config.js  log_analyzer.py  package-lock.json  package.json  package.sh  test_analyzer.py
MergedPlugin/RFIX/: IFCPropertyReaderFix.grc.exclude  MergedPluginFix.grc  MergedPluginFix.grc.backup  MergedPluginFix.grc.backup2  MinimalTest.html  Selection_Test.html  Selection_Test.html.backup  SimpleBridgeTest.html
MergedPlugin/RFIX.mac/: Info.plist
MergedPlugin/Src/: APICommon.h  MergedPlugin.cpp  MergedPlugin.cpp.backup  MergedPlugin.hpp  MergedPluginDebug.cpp  MergedPluginDebug.hpp  MergedPluginMain.cpp  MergedPluginPalette.cpp  MergedPluginPalette.cpp.backup2  MergedPluginPalette.hpp  MergedPluginPalette.hpp.backup  MergedPluginPalette_clean.hpp  PropertyUtils.cpp  PropertyUtils.hpp
MergedPlugin/__mocks__/: ACAPI.js
MergedPlugin/__tests__/: ACAPI.test.js  merged-plugin.test.js
REREBuild/: API.Development.Kit.MAC.29.3100  CMakeLists.txt  Opencode提示词.md  build.sh
REREBuild/HBIMComponentEntry/: API.Development.Kit.MAC.29.3100  README.md  TESTING.md  check_bundle.sh
REREBuild/HBIMComponentEntry/RFIX/: HBIMComponentEntry.grc
REREBuild/HBIMComponentEntry/Src/: APIEnvir.h  PluginPalette.cpp  PluginPalette.hpp  PropertyUtils.hpp
REREBuild/RFIX/: HBIMComponentEntry.grc
REREBuild/RFIX.mac/: Info.plist
REREBuild/Src/: PluginMain.cpp  PluginPalette.cpp  PluginPalette.hpp
ReBuild/: combine_html.py
ReBuild/NewPlugin/: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  FINAL_RELEASE_CHECKLIST.md  ISSUES.md  QUICK_TEST.md  README.md  TESTING.md  USER_TESTING_FEEDBACK.md  build.sh  check_bundle.sh  debug_collector.js  install.sh  package-lock.json  package.json  playwright-test-report.txt  playwright-ui-test.js  run-ui-tests.sh  test-e2e.html  test-e2e.js  test-server.js  test-ui-states.js  validate_plugin.sh
ReBuild/NewPlugin/MergedPlugin_v0.2.13.71/: DEBUGGING_GUIDE.md  ISSUES.md  README.md  clear_cef_cache.sh
ReBuild/NewPlugin/RFIX/: NewPlugin.grc  index.html  index.html.old  index_new.html  index_new_append.html
ReBuild/NewPlugin/RFIX.mac/: Info.plist
ReBuild/NewPlugin/Src/: ComponentInfo.cpp  ComponentInfo.hpp  NewPluginDebug.cpp  NewPluginDebug.hpp  PluginMain.cpp  PluginPalette.cpp  PluginPalette.hpp  PropertyUtils.cpp  PropertyUtils.hpp
ReBuild/NewPlugin/__tests__/: acapi.test.js  mock-acapi.js  setup.js
ReBuild/NewPlugin/tests/: CMakeLists.txt
ReBuild/NewPlugin/tests/mocks/API/: MockACAPI.hpp
ReBuild/NewPlugin/tests/unit/Basic/: BasicTest.cpp  CMakeLists.txt
ReBuild/NewPlugin/tests/unit/ComponentInfo/: CMakeLists.txt  ComponentInfoTest.cpp
ReBuild/NewPlugin/tests/unit/PropertyUtils/: CMakeLists.txt  PropertyUtilsTest.cpp
ReBuild/NewPlugin/tests/unit/Utils/: CMakeLists.txt  StringUtilsTest.cpp
(+2184 files in other folders)
